--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Construct easy to follow semantic expressions using variables that repr
 paragraph=SmartPins allows you to easily and implcitly read from pins and write to pins using intuitive grammar. Reading from a SmartPin variable (or assigning it to another variable) implicitly reads the pin state. Writing to a SmartPin variable implicitly writes to the pin. Simple button following LED examples can be as simple as `led = button;`.
 category=Data Processing
 url=https://github.com/ripred/SmartPin
-architectures=avr, esp32
+architectures=avr
 includes=SmartPin.h
